Finished test project study

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div class = "footer-content">
             <img src="img/logo.png" alt="" class="logo">
             <ul class="footer-menu">
+                <p>Empresa</p>
                 <li class="footer-menu-item">
                     Sobre
                 </li>
@@ -46,6 +47,7 @@
             </ul>
 
             <ul class="footer-menu">
+                <p>Comunidades</p>
                 <li class="footer-menu-item">
                     Para Artistas
                 </li>
@@ -64,6 +66,7 @@
             </ul>
 
             <ul class="footer-menu">
+                <p>Links úteis</p>
                 <li class="footer-menu-item">
                     Ajuda
                 </li>
@@ -83,13 +86,23 @@
         </div>
         <div class="footer-info">
             <ul class="footer-info-items">
-                <li class="footer-info-item"></li>
-                <li class="footer-info-item"></li>
-                <li class="footer-info-item"></li>
-                <li class="footer-info-item"></li>
+                <li class="footer-info-item">Legal</li>
+                <li class="footer-info-item">Centro de Privacidade</li>
+                <li class="footer-info-item">Política de Privacidade</li>
+                <li class="footer-info-item">Cookies</li>
+                <li class="footer-info-item">Sobre Anúncios</li>
             </ul>
+
+            <div class="rights">
+                <div class="country">
+                    <p>Brasil</p>
+                    <img src="img/brazil.png" alt="" class="brazil-flag">
+                </div>
+                <p>&copy; 2024 spotify AB</p>
+            </div>
         </div>
     </footer>
-    <script src="https://kit.fontawesome.com/cb97ea116a.js" crossorigin="anonymous"></script>>
+    
+    <script src="https://kit.fontawesome.com/cb97ea116a.js" crossorigin="anonymous"></script>
 </body>
 </html>
