--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <title>Spotify</title>
+    <title>inMusic</title>
 </head>
 <body>
     <navbar id ="navbar">
@@ -26,7 +26,7 @@
             <p> 
                 Milhões de músicas à sua escolha. E nem precisa de cartão de crédito.
             </p>
-            <button class="btn-primary">Obtenha o Spotify Free</button>
+            <button class="btn-primary">Obtenha o inMusic Free</button>
         </div>
     </div>
 
@@ -98,7 +98,7 @@
                     <p>Brasil</p>
                     <img src="img/brazil.png" alt="" class="brazil-flag">
                 </div>
-                <p>&copy; 2024 spotify AB</p>
+                <p>&copy; 2024 inMusic AB</p>
             </div>
         </div>
     </footer>
