--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li class="navbar-item">Premium</li>
                 <li class="navbar-item">Ajuda</li>
                 <li class="navbar-item">Inscrever-se</li>
-                <li class="navbar-item">Entrar</li>
+                <li class="navbar-item"><a href="login.html">Entrar</a></li>
             </ul>
         </div>
     </navbar>
