--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <navbar id ="navbar">
         <div class = "navbar-container">
-            <img src="./img/logo.png" alt="" class="logo" />
+            <img src="./img/Design_sem_nome__1_-removebg.png" alt="" class="logo" />
             <ul class="navbar-items">
                 <li class="navbar-item">Premium</li>
                 <li class="navbar-item">Ajuda</li>
@@ -32,7 +32,7 @@
 
     <footer id ="footer">
         <div class = "footer-content">
-            <img src="img/logo.png" alt="" class="logo">
+            <img src="img/Design_sem_nome__1_-removebg.png" alt="" class="logo">
             <ul class="footer-menu">
                 <p>Empresa</p>
                 <li class="footer-menu-item">
