--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Entrar</h2>
+        <h2>Login</h2>
         <form>
             <div class="input-group">
                 <label for="username">Usuário:</label>
