--- a/cadastro.html
+++ b/cadastro.html
@@ -1,28 +1,47 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>InMusic | Cadastro</title>
     <link rel="stylesheet" href="login.css" />
-    <title>Tela de Login</title>
   </head>
   <body>
     <div class="container">
-      <h2>Login</h2>
-      <form onsubmit="entrar(event)">
-        <div class="input-group">
-          <label for="nome">Usuário:</label>
-          <input type="text" id="nome" name="username" required />
-        </div>
-        <div class="input-group">
-          <label for="senha">Senha:</label>
-          <input type="password" id="senha" name="password" required />
-        </div>
-        <button type="submit">Entrar</button>
-        <p class="erro-login">Login errado, tente novamente</p>
+      <h2 class="usuario">Cadastro</h2>
+
+      <form onsubmit="cadastrarNovoUsuario(event)">
+        <label for="nome">Nome Completo:</label>
+        <input
+          type="text"
+          id="nome"
+          name="nome"
+          placeholder="Digite seu apelido"
+          required
+        /><br /><br />
+
+        <label for="email">E-mail:</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          placeholder="Digite seu e-mail"
+          required
+        /><br /><br />
+
+        <label for="senha">Senha:</label>
+        <input
+          type="password"
+          id="senha"
+          name="senha"
+          placeholder="Digite sua senha"
+          required
+        /><br /><br />
+
+        <button type="submit">Enviar</button>
+        <a class="hasAccount" href="login.html">Já tem uma conta?</a>
       </form>
     </div>
-
     <script>
       function checarBanco() {
         if (!localStorage.getItem("estaLogado")) {
@@ -53,6 +72,8 @@
           localStorage.setItem("usuarios", JSON.stringify([]));
         }
       }
+
+      checarBanco();
 
       function cadastrarNovoUsuario(event) {
         event.preventDefault();
@@ -91,10 +112,9 @@
         window.location.href = "login.html";
       }
 
-      function entrar(event) {
-        event.preventDefault();
-        let loginQuerendoEntrar = document.getElementById("nome").value;
-        let senhaQuerendoEntrar = document.getElementById("senha").value;
+      function entrar() {
+        let loginQuerendoEntrar = prompt("Qual o username?");
+        let senhaQuerendoEntrar = prompt("Qual a senha?");
         const usuariosJaCadastrados = JSON.parse(
           localStorage.getItem("usuarios")
         );
@@ -107,26 +127,21 @@
             loginQuerendoEntrar === loginUsuario &&
             senhaQuerendoEntrar === senhaUsuario
           ) {
-            // logado, deu bom.
-
+            document.querySelector(
+              ".usuario"
+            ).innerHTML = `Seja bem-vindo, ${loginUsuario}`;
             localStorage.setItem("estaLogado", true);
             localStorage.setItem("usernameLogado", loginUsuario);
             checarBanco();
-            window.location.href = "index.html";
             return;
           }
         }
-
-        document.querySelector(".erro-login").classList.add("hidden");
-        document.querySelectorAll("input").forEach((inp) => (inp.value = ""));
       }
 
       function sair() {
         localStorage.setItem("estaLogado", false);
         checarBanco();
       }
-
-      document.querySelectorAll("input").forEach((inp) => (inp.value = ""));
     </script>
   </body>
 </html>
